src/test/TuplesFail2/TuplesFail2.expected
error: TuplesFail2.panda:1:9: expected a tuple of length 2 for multi-valued assignment
error: TuplesFail2.panda:2:16: expected a tuple of length 3 for multi-valued assignment
2 errors
