src/test/TuplesFail2/TuplesFail2.panda
var a, b := (1, 2, 3)
var c, d, e := 7